--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ repositories {
 dependencies {
     compile     'com.google.guava:guava:19.0'
     compile     'com.google.code.findbugs:jsr305:3.0.1'
-    compile files('../omega-automaton-lib/lib/jhoafparser-1.1.1.jar')
+    compile files('lib/jhoafparser-1.1.1.jar')
     compile     'de.tum.in:ltl-lib:0.0.1-SNAPSHOT'
     compile     'de.tum.in:omega-automaton-lib:0.0.1-SNAPSHOT'
     runtime     'jdd:jdd:107-lite'
