--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@
 apply plugin: 'java'
 
 project.group = 'de.tum.in'
-project.version = '0.0.1-SNAPSHOT'
+project.version = '0.0.2-SNAPSHOT'
 
 repositories {
     maven {url 'https://www7.in.tum.de/~sickert/maven/'}
@@ -28,10 +28,9 @@ repositories {
 dependencies {
     compile     'com.google.guava:guava:19.0'
     compile     'com.google.code.findbugs:jsr305:3.0.1'
-    compile     'net.sf.javabdd:javabdd:1.0.3'
-    compile     'de.tum.in:ltl-lib:0.0.1-SNAPSHOT'
+    compile     'jdd:jdd:108'
+    compile     'de.tum.in:ltl-lib:0.0.2-SNAPSHOT'
     compile files('lib/jhoafparser-1.1.1.jar')
-    runtime     'jdd:jdd:107-lite'
     testCompile 'junit:junit:4+'
 }
 
