--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,4 +3,13 @@ before_script:
 
 build:
   script:
-    - ./gradlew build
+    - ./gradlew assemble
+    - tar xzfv build/distributions/translations-0.0.4.tar
+
+test:
+  script:
+    - ltlcross --timeout=600 --grind=debug.ltl -F "formulas/check.ltl" '{S} ltl2tgba -D --generic -H -f %f >%O' '{LTL2LDBA} build/distributions/translations-0.0.4/bin/ltl2ldba %f >%O' '{LTL2Parity} build/distributions/translations-0.0.4/bin/ltl2parity %f >%O' \ 
+    - ./gradlew test
+
+artifacts:
+  untracked: true
