--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,16 @@
-before_script:
+assemble:
+  stage: build
+  script:
     - chmod +x gradlew
-
-build:
-  script:
     - ./gradlew assemble
-    - tar xzfv build/distributions/translations-0.0.4.tar
-
-test:
+    
+junit:
+  stage: test
   script:
-    - ltlcross --timeout=600 --grind=debug.ltl -F "formulas/check.ltl" '{S} ltl2tgba -D --generic -H -f %f >%O' '{LTL2LDBA} build/distributions/translations-0.0.4/bin/ltl2ldba %f >%O' '{LTL2Parity} build/distributions/translations-0.0.4/bin/ltl2parity %f >%O' \ 
-    - ./gradlew test
+    - ./gradlew check
 
-artifacts:
-  untracked: true
+ltlcross:
+  stage: test
+  script:
+    - tar xzfv build/distributions/translations-0.0.4.tar
+    - ltlcross --timeout=600 --grind=debug.ltl -F "formulas/check.ltl" '{S} ltl2tgba -D --generic -H -f %f >%O' '{LTL2LDBA} build/distributions/translations-0.0.4/bin/ltl2ldba %f >%O' '{LTL2Parity} build/distributions/translations-0.0.4/bin/ltl2parity %f >%O'
