--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,5 +15,5 @@ ltlcross:
   stage: test
   script:
     - ./gradlew assemble
-    - tar xzfv build/distributions/translations-0.0.4.tar
+    - tar xvf build/distributions/translations-0.0.4.tar
     - ltlcross --timeout=600 --grind=debug.ltl -F "formulas/check.ltl" '{S} ltl2tgba -D --generic -H -f %f >%O' '{LTL2LDBA} build/distributions/translations-0.0.4/bin/ltl2ldba %f >%O' '{LTL2Parity} build/distributions/translations-0.0.4/bin/ltl2parity %f >%O'
