--- a/build.gradle
+++ b/build.gradle
@@ -16,19 +16,21 @@
  */
 
 apply plugin: 'java'
+apply plugin: 'findbugs'
 
 project.group = 'de.tum.in'
-project.version = '0.0.9'
+project.version = '0.0.10'
 
 repositories {
-    maven {url 'https://www7.in.tum.de/~sickert/maven/'}
+    maven { url 'https://www7.in.tum.de/~sickert/maven/' }
     mavenCentral()
 }
 
 dependencies {
-    compile     'com.google.guava:guava:19.0'
-    compile     'com.google.code.findbugs:jsr305:3.0.1'
-    compile     'jdd:jdd:108'
+	compileOnly 'com.google.code.findbugs:jsr305:3.0.1'
+    compileOnly 'com.google.code.findbugs:annotations:3.0.1'
+    compile 'com.google.guava:guava:19.0'
+    compile 'jdd:jdd:108'
     compile files('lib/jhoafparser-1.1.1.jar')
     testCompile 'junit:junit:4+'
 }
