--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@
  */
 
 apply plugin: 'java'
+apply plugin: 'findbugs'
 apply plugin: 'application'
 
 project.group = 'de.tum.in'
@@ -27,13 +28,14 @@ repositories {
 }
 
 dependencies {
-    compile     'com.google.guava:guava:19.0'
-    compile     'com.google.code.findbugs:jsr305:3.0.1'
+    compileOnly 'com.google.code.findbugs:jsr305:3.0.1'
+    compileOnly 'com.google.code.findbugs:annotations:3.0.1'
+    compile 'com.google.guava:guava:19.0'
     compile files('lib/jhoafparser-1.1.1.jar')
-    compile     'de.tum.in:ltl-lib:0.0.11'
-    compile     'de.tum.in:omega-automaton-lib:0.0.8'
-    compile     'it.unimi.dsi:fastutil:7.0.12'
-    runtime     'jdd:jdd:108'
+    compile 'de.tum.in:ltl-lib:0.0.12'
+    compile 'de.tum.in:omega-automaton-lib:0.0.10'
+    compile 'it.unimi.dsi:fastutil:7.0.12'
+    runtime 'jdd:jdd:108'
     testCompile 'junit:junit:4+'
 }
 
