--- a/build.gradle
+++ b/build.gradle
@@ -23,20 +23,22 @@ project.group = 'de.tum.in'
 project.version = '0.0.4'
 
 repositories {
-    maven {url 'https://www7.in.tum.de/~sickert/maven/'}
+    maven { url 'https://www7.in.tum.de/~sickert/maven/' }
     mavenCentral()
 }
 
 dependencies {
     compileOnly 'com.google.code.findbugs:jsr305:3.0.1'
-    compileOnly 'com.google.code.findbugs:annotations:3.0.1'
     compile 'com.google.guava:guava:19.0'
-    compile files('lib/jhoafparser-1.1.1.jar')
     compile 'de.tum.in:ltl-lib:0.0.12'
     compile 'de.tum.in:omega-automaton-lib:0.0.10'
     compile 'it.unimi.dsi:fastutil:7.0.12'
+    compile files('lib/jhoafparser-1.1.1.jar')
     runtime 'jdd:jdd:108'
     testCompile 'junit:junit:4+'
+
+    // Additional Checks
+    findbugsPlugins 'com.mebigfatguy.fb-contrib:fb-contrib:6.6.1'
 }
 
 task createAllStartScripts() << {
