[omega-automaton-lib] Enable build failure reporting via artifacts.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,4 +3,9 @@ before_script:
 
 build:
   script:
-    - ./gradlew build
+    - ./gradlew build  
+  artifacts:
+    paths:
+    - build/reports/
+    when: on_failure
+    expire_in: 1 week
