--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,13 @@ dependencies {
     findbugsPlugins 'com.mebigfatguy.fb-contrib:fb-contrib:6.6.1'
 }
 
+tasks.withType(FindBugs) {
+    reports {
+        xml.enabled false
+        html.enabled true
+    }
+}
+
 // If a user file is present, include it.
 if (file('../user.gradle').exists()) {
     apply from: '../user.gradle'
