Enable build failure reporting via artifacts.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,11 @@ build:
   stage: build
   script:
     - ./gradlew build
+  artifacts:
+    paths:
+    - build/reports/
+    when: on_failure
+    expire_in: 1 week
 
 ltlcross-ltl2ldba:
   stage: test
