--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,8 @@ repositories {
 dependencies {
     compileOnly 'com.google.code.findbugs:jsr305:3.0.1'
     compile 'com.google.guava:guava:19.0'
-    compile 'de.tum.in:ltl-lib:0.0.13'
-    compile 'de.tum.in:omega-automaton-lib:0.0.12'
+    compile 'de.tum.in:ltl-lib:0.0.14'
+    compile 'de.tum.in:omega-automaton-lib:0.0.13'
     compile 'it.unimi.dsi:fastutil:7.0.12'
     compile files('lib/jhoafparser-1.1.1.jar')
     runtime 'jdd:jdd:108'
@@ -55,6 +55,7 @@ task createAllStartScripts() << {
 
 def scripts = [
     'ltl2ldba':'translations.ltl2ldba.LTL2LDBA',
+    'ltl2ldgba':'translations.ltl2ldba.LTL2LDGBA',
     'nba2ldba':'translations.nba2ldba.NBA2LDBA',
     'ltl2parity':'translations.ltl2parity.LTL2Parity',
 ]
