--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ ltlcross-ltl2ldba:
     - ./gradlew distTar
     - tar xvf build/distributions/translations-0.0.4.tar
     - randltl -n 10 a b c d e f --tree-size=10..40 | ltlfilt --nnf -o formulas/rand.ltl
-    - ltlcross --stop-on-error --timeout=300 -F "formulas/check.ltl" -F "formulas/rand.ltl" '{spot} ltl2tgba -H -f %f >%O' '{ltl2ldba} translations-0.0.4/bin/ltl2ldba %f >%O'
+    - ltlcross --stop-on-error --timeout=300 -F "formulas/check.ltl" -F "formulas/rand.ltl" "formulas/bugs.ltl" '{spot} ltl2tgba -H -f %f >%O' '{ltl2ldba} translations-0.0.4/bin/ltl2ldba %f >%O'
 
 ltlcross-ltl2ldgba:
   stage: test
@@ -25,7 +25,7 @@ ltlcross-ltl2ldgba:
     - ./gradlew distTar
     - tar xvf build/distributions/translations-0.0.4.tar
     - randltl -n 10 a b c d e f --tree-size=10..40 | ltlfilt --nnf -o formulas/rand.ltl
-    - ltlcross --stop-on-error --timeout=300 -F "formulas/check.ltl" -F "formulas/rand.ltl" '{spot} ltl2tgba -H -f %f >%O' '{ltl2ldba} translations-0.0.4/bin/ltl2ldgba %f >%O'
+    - ltlcross --stop-on-error --timeout=300 -F "formulas/check.ltl" -F "formulas/rand.ltl" "formulas/bugs.ltl" '{spot} ltl2tgba -H -f %f >%O' '{ltl2ldba} translations-0.0.4/bin/ltl2ldgba %f >%O'
 
 ltlcross-ltl2parity:
   stage: test
@@ -33,4 +33,4 @@ ltlcross-ltl2parity:
     - ./gradlew distTar
     - tar xvf build/distributions/translations-0.0.4.tar
     - randltl -n 4 a b c d e f --tree-size=10..40 | ltlfilt --nnf -o formulas/rand.ltl
-    - ltlcross --stop-on-error --timeout=300 -F "formulas/check.ltl" -F "formulas/rand.ltl" '{spot} ltl2tgba -H -f %f >%O' '{ltl2parity} translations-0.0.4/bin/ltl2parity %f >%O'
+    - ltlcross --stop-on-error --timeout=300 -F "formulas/check.ltl" -F "formulas/rand.ltl" "formulas/bugs.ltl" '{spot} ltl2tgba -H -f %f >%O' '{ltl2parity} translations-0.0.4/bin/ltl2parity %f >%O'
