--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ ltlcross-ltl2ldba:
     - ./gradlew distTar
     - tar xvf build/distributions/translations-0.0.4.tar
     - randltl -n 10 a b c d e f --tree-size=10..40 | ltlfilt --nnf -o formulas/rand.ltl
+    - JAVA_OPTS="-enableassertions"
     - ltlcross --stop-on-error --timeout=300 -F "formulas/check.ltl" -F "formulas/rand.ltl" '{spot} ltl2tgba -H -f %f >%O' '{ltl2ldba} translations-0.0.4/bin/ltl2ldba %f >%O'
 
 ltlcross-ltl2ldgba:
@@ -25,6 +26,7 @@ ltlcross-ltl2ldgba:
     - ./gradlew distTar
     - tar xvf build/distributions/translations-0.0.4.tar
     - randltl -n 10 a b c d e f --tree-size=10..40 | ltlfilt --nnf -o formulas/rand.ltl
+    - JAVA_OPTS="-enableassertions"
     - ltlcross --stop-on-error --timeout=300 -F "formulas/check.ltl" -F "formulas/rand.ltl" '{spot} ltl2tgba -H -f %f >%O' '{ltl2ldba} translations-0.0.4/bin/ltl2ldgba %f >%O'
 
 ltlcross-ltl2parity:
@@ -33,4 +35,5 @@ ltlcross-ltl2parity:
     - ./gradlew distTar
     - tar xvf build/distributions/translations-0.0.4.tar
     - randltl -n 4 a b c d e f --tree-size=10..40 | ltlfilt --nnf -o formulas/rand.ltl
+    - JAVA_OPTS="-enableassertions"
     - ltlcross --stop-on-error --timeout=300 -F "formulas/check.ltl" -F "formulas/rand.ltl" '{spot} ltl2tgba -H -f %f >%O' '{ltl2parity} translations-0.0.4/bin/ltl2parity %f >%O'
