Add parallel mode.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,3 +37,12 @@ ltlcross-ltl2parity:
     - randltl -n 4 a b c d e f --tree-size=10..40 | ltlfilt --nnf -o formulas/rand.ltl
     - JAVA_OPTS="-enableassertions"
     - ltlcross --stop-on-error --timeout=300 -F "formulas/check.ltl" -F "formulas/rand.ltl" '{spot} ltl2tgba -H -f %f >%O' '{ltl2parity} translations-0.0.4/bin/ltl2parity %f >%O'
+
+ltlcross-ltl2parity-parallel:
+  stage: test
+  script:
+    - ./gradlew distTar
+    - tar xvf build/distributions/translations-0.0.4.tar
+    - randltl -n 4 a b c d e f --tree-size=10..40 | ltlfilt --nnf -o formulas/rand.ltl
+    - JAVA_OPTS="-enableassertions"
+    - ltlcross --stop-on-error --timeout=300 -F "formulas/check.ltl" -F "formulas/rand.ltl" '{spot} ltl2tgba -H -f %f >%O' '{ltl2parity} translations-0.0.4/bin/ltl2parity --parallel %f >%O'
