[ltl-lib] Register only one variable for each literal.

--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,8 @@ dependencies {
     compileOnly 'com.google.code.findbugs:annotations:3.0.1'
     compileOnly 'org.immutables:value:2.2.5'
     compile 'com.google.guava:guava:19.0'
-    compile 'jdd:jdd:0.0.112'
+    compile 'it.unimi.dsi:fastutil:7.0.12'
+    compile 'jdd:jdd:0.0.115'
     testCompile 'junit:junit:4+'
 }
 
