--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,34 +15,34 @@ ltlcross-ltl2ldba:
   stage: test
   script:
     - ./gradlew distTar
-    - tar xvf build/distributions/translations-0.0.4.tar
+    - tar xvf build/distributions/translations-*.tar -C build --strip-components=1
     - randltl -n 10 a b c d e f --tree-size=10..50 | ltlfilt --nnf -o formulas/rand.ltl
     - JAVA_OPTS="-enableassertions"
-    - ltlcross --stop-on-error --timeout=300 -F "formulas/check.ltl" -F "formulas/rand.ltl" '{spot} ltl2tgba -H -f %f >%O' '{ltl2ldba} translations-0.0.4/bin/ltl2ldba %f >%O'
+    - ltlcross --stop-on-error --timeout=300 -F "formulas/check.ltl" -F "formulas/rand.ltl" '{spot} ltl2tgba -H -f %f >%O' '{ltl2ldba} build/bin/ltl2ldba %f >%O'
 
 ltlcross-ltl2ldgba:
   stage: test
   script:
     - ./gradlew distTar
-    - tar xvf build/distributions/translations-0.0.4.tar
+    - tar xvf build/distributions/translations-*.tar -C build --strip-components=1
     - randltl -n 10 a b c d e f --tree-size=10..50 | ltlfilt --nnf -o formulas/rand.ltl
     - JAVA_OPTS="-enableassertions"
-    - ltlcross --stop-on-error --timeout=300 -F "formulas/check.ltl" -F "formulas/rand.ltl" '{spot} ltl2tgba -H -f %f >%O' '{ltl2ldba} translations-0.0.4/bin/ltl2ldgba %f >%O'
+    - ltlcross --stop-on-error --timeout=300 -F "formulas/check.ltl" -F "formulas/rand.ltl" '{spot} ltl2tgba -H -f %f >%O' '{ltl2ldba} build/bin/ltl2ldgba %f >%O'
 
 ltlcross-ltl2parity:
   stage: test
   script:
     - ./gradlew distTar
-    - tar xvf build/distributions/translations-0.0.4.tar
+    - tar xvf build/distributions/translations-*.tar -C build --strip-components=1
     - randltl -n 6 a b c d e f --tree-size=10..50 | ltlfilt --nnf -o formulas/rand.ltl
     - JAVA_OPTS="-enableassertions"
-    - ltlcross --stop-on-error --timeout=300 -F "formulas/check.ltl" -F "formulas/rand.ltl" '{spot} ltl2tgba -H -f %f >%O' '{ltl2parity} translations-0.0.4/bin/ltl2parity %f >%O'
+    - ltlcross --stop-on-error --timeout=300 -F "formulas/check.ltl" -F "formulas/rand.ltl" '{spot} ltl2tgba -H -f %f >%O' '{ltl2parity} build/bin/ltl2parity %f >%O'
 
 ltlcross-ltl2parity-parallel:
   stage: test
   script:
     - ./gradlew distTar
-    - tar xvf build/distributions/translations-0.0.4.tar
+    - tar xvf build/distributions/translations-*.tar -C build --strip-components=1
     - randltl -n 6 a b c d e f --tree-size=10..50 | ltlfilt --nnf -o formulas/rand.ltl
     - JAVA_OPTS="-enableassertions"
-    - ltlcross --stop-on-error --timeout=300 -F "formulas/check.ltl" -F "formulas/rand.ltl" '{spot} ltl2tgba -H -f %f >%O' '{ltl2parity} translations-0.0.4/bin/ltl2parity --parallel %f >%O'
+    - ltlcross --stop-on-error --timeout=300 -F "formulas/check.ltl" -F "formulas/rand.ltl" '{spot} ltl2tgba -H -f %f >%O' '{ltl2parity} build/bin/ltl2parity --parallel %f >%O'
