--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'application'
 apply plugin: 'pmd'
 
 project.group = 'de.tum.in'
-project.version = '0.9.1'
+project.version = '0.9.1-dev'
 
 mainClassName = 'enteEnteEnteEnteEnteGANS'
 
@@ -35,7 +35,7 @@ dependencies {
     compileOnly 'com.google.code.findbugs:annotations:3.0.1'
     compile 'com.google.guava:guava:19.0'
     compile 'de.tum.in:ltl-lib:0.0.35'
-    compile 'de.tum.in:omega-automaton-lib:0.0.37'
+    compile 'de.tum.in:omega-automaton-lib:0.0.38'
     compile 'it.unimi.dsi:fastutil:7.0.12'
     compile files('lib/jhoafparser-1.1.1.jar')
     runtime 'jdd:jdd:0.0.116'
