--- a/build.gradle
+++ b/build.gradle
@@ -29,10 +29,9 @@ repositories {
 dependencies {
     compileOnly 'com.google.code.findbugs:jsr305:3.0.1'
     compileOnly 'com.google.code.findbugs:annotations:3.0.1'
-    compileOnly 'org.immutables:value:2.2.5'
-    compile 'com.google.guava:guava:19.0'
+    compileOnly 'org.immutables:value:2.3.2'
+    compile 'com.google.guava:guava:20.0-rc1'
     compile 'it.unimi.dsi:fastutil:7.0.12'
-    compile 'jdd:jdd:0.0.116'
     compile files('lib/jhoafparser-1.1.1.jar')
     testCompile 'junit:junit:4+'
 
