--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'application'
 apply plugin: 'pmd'
 
 project.group = 'de.tum.in'
-project.version = '0.9.1-dev'
+project.version = '0.9.4-dev'
 
 mainClassName = 'enteEnteEnteEnteEnteGANS'
 
@@ -33,12 +33,10 @@ repositories {
 dependencies {
     compileOnly 'com.google.code.findbugs:jsr305:3.0.1'
     compileOnly 'com.google.code.findbugs:annotations:3.0.1'
-    compile 'com.google.guava:guava:19.0'
-    compile 'de.tum.in:ltl-lib:0.0.35'
-    compile 'de.tum.in:omega-automaton-lib:0.0.40'
-    compile 'it.unimi.dsi:fastutil:7.0.12'
+    compile 'com.google.guava:guava:20.0'
+    compile 'de.tum.in:owl-base:0.1.2'
+    compile 'it.unimi.dsi:fastutil:7.0.13'
     compile files('lib/jhoafparser-1.1.1.jar')
-    runtime 'jdd:jdd:0.0.116'
     testCompile 'junit:junit:4+'
     testCompile 'com.google.code.findbugs:jsr305:3.0.1'
 
