Test improvements and some bug fixes
Fixed a rare bug with the growing algorithm.
Fixed a bug with compose (lowCompose and highCompose where not pushed to the work stack)
Added theory tests for compose and support based on syntax trees.
Reworked tests to get an even spread to each type of operations (previously unary, binary and ternary tests had n, n^2 and n^3 invocations, resp.)

--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile 'it.unimi.dsi:fastutil:7.0.13'
     compile files('lib/jhoafparser-1.1.1.jar')
     testCompile 'junit:junit:4+'
+    testCompile 'org.hamcrest:hamcrest-all:1.3'
 
     // Additional Checks
     // findbugsPlugins 'com.mebigfatguy.fb-contrib:fb-contrib:6.6.3'
