--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'application'
 apply plugin: 'pmd'
 
 project.group = 'de.tum.in'
-project.version = '0.9.4-dev'
+project.version = '0.9.5'
 
 mainClassName = 'enteEnteEnteEnteEnteGANS'
 
@@ -34,10 +34,11 @@ dependencies {
     compileOnly 'com.google.code.findbugs:jsr305:3.0.1'
     compileOnly 'com.google.code.findbugs:annotations:3.0.1'
     compile 'com.google.guava:guava:20.0'
-    compile 'de.tum.in:owl-base:0.1.2'
+    compile 'de.tum.in:owl-base:0.1.3'
     compile 'it.unimi.dsi:fastutil:7.0.13'
     compile files('lib/jhoafparser-1.1.1.jar')
     testCompile 'junit:junit:4+'
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
     testCompile 'com.google.code.findbugs:jsr305:3.0.1'
 
     // Additional Checks
