--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ apply plugin: 'java'
 apply plugin: 'findbugs'
 apply plugin: 'pmd'
 apply plugin: 'checkstyle'
+apply plugin: 'idea'
 
 project.group = 'de.tum.in'
 project.version = '0.1.3'
@@ -34,16 +35,33 @@ repositories {
 dependencies {
     compileOnly 'com.google.code.findbugs:jsr305:3.0.1'
     compileOnly 'com.google.code.findbugs:annotations:3.0.1'
-    compileOnly 'org.immutables:value:2.3.7'
+    compileOnly 'org.immutables:value:2.3.9'
+
     compile 'com.google.guava:guava:20.0'
     compile 'it.unimi.dsi:fastutil:7.0.13'
     compile files('lib/jhoafparser-1.1.1.jar')
+
     testCompile 'junit:junit:4+'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
 
     // Additional Checks
     // findbugsPlugins 'com.mebigfatguy.fb-contrib:fb-contrib:6.6.3'
 }
+
+
+idea {
+    module {
+        sourceDirs += file('src/main/generated')
+        testSourceDirs += file('src/test/generated')
+        //generatedSourceDirs += file('src/main/generated')
+
+        jdkName = '1.8'
+
+        downloadJavadoc = true
+        downloadSources = true
+    }
+}
+
 
 // https://docs.gradle.org/current/dsl/org.gradle.api.plugins.quality.FindBugs.html
 findbugs {
