--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ before_script:
 build:
   stage: build
   script:
-    - ./gradlew build
+    - ./gradlew --refresh-dependencies build
   artifacts:
     paths:
     - build/reports/
@@ -20,7 +20,7 @@ build:
     - ltlcross --stop-on-error --timeout=300 -F "formulas/base.ltl" "$SPOT_TOOL" "$LTL_TOOL"
     - ltlcross --stop-on-error --timeout=300 -F "formulas/regressions.ltl" "$SPOT_TOOL" "$LTL_TOOL"
     - ltlcross --stop-on-error --timeout=300 -F "formulas/check.ltl" "$SPOT_TOOL" "$LTL_TOOL"
-    - randltl -n 10 a b c d e f --tree-size=3..30 | ltlfilt --nnf | ltlcross --stop-on-error --timeout=300 "$SPOT_TOOL" "$LTL_TOOL"
+    - randltl --seed=12345 -n 10 a b c d e f --tree-size=5..25 | ltlfilt --nnf | ltlcross --stop-on-error --timeout=300 "$SPOT_TOOL" "$LTL_TOOL"
 
 test:ltl2ldba:
   variables:
