Add experimental LDBA construction.
This construction is exp-sized for certain fragments, if the initial
component is non-deterministic.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,11 @@ test:ltl2ldba:
     LTL_TOOL: "{ltl2ldba} build/bin/ltl2ldba %f >%O"
   <<: *ltlcross_template
 
+test:ltl2ldba:
+  variables:
+    LTL_TOOL: "{ltl2ldba-ng} build/bin/ltl2ldba-ng %f >%O"
+  <<: *ltlcross_template
+
 test:ltl2ldgba:
   variables:
     LTL_TOOL: "{ltl2ldgba} build/bin/ltl2ldgba %f >%O"
