Test constructions also without optimisations.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,3 +56,23 @@ test:ltl2det-parallel:
   variables:
     LTL_TOOL: "{ltl2det} build/bin/ltl2det --parallel %f >%O"
   <<: *ltlcross_template
+
+  test:ltl2ldba:no-opt:
+  variables:
+    LTL_TOOL: "{ltl2ldba} build/bin/ltl2ldba --optimisations=[REMOVE_EPSILON_TRANSITIONS] %f >%O"
+  <<: *ltlcross_template
+
+test:ltl2ldba-ng:no-opt:
+  variables:
+    LTL_TOOL: "{ltl2ldba-ng} build/bin/ltl2ldba-ng --optimisations=[REMOVE_EPSILON_TRANSITIONS] %f >%O"
+  <<: *ltlcross_template
+
+test:ltl2ldgba:no-opt:
+  variables:
+    LTL_TOOL: "{ltl2ldgba} build/bin/ltl2ldgba --optimisations=[REMOVE_EPSILON_TRANSITIONS] %f >%O"
+  <<: *ltlcross_template
+
+test:ltl2parity:no-opt:
+  variables:
+    LTL_TOOL: "{ltl2parity} build/bin/ltl2parity --optimisations=none %f >%O"
+  <<: *ltlcross_template
