--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ apply plugin: 'checkstyle'
 apply plugin: 'idea'
 
 project.group = 'de.tum.in'
-project.version = '0.2.0'
+project.version = '0.2.1'
 
 def defaultEncoding = 'UTF-8'
 [compileJava, compileTestJava]*.options*.encoding = defaultEncoding
@@ -37,7 +37,7 @@ dependencies {
     compileOnly 'com.google.code.findbugs:annotations:3.0.1'
     compileOnly 'org.immutables:value:2.3.9'
 
-    compile 'com.google.guava:guava:20.0'
+    compile 'com.google.guava:guava:21.0-rc2'
     compile 'it.unimi.dsi:fastutil:7.0.13'
     compile files('lib/jhoafparser-1.1.1.jar')
 
@@ -45,7 +45,7 @@ dependencies {
     testCompile 'org.hamcrest:hamcrest-all:1.3'
 
     // Additional Checks
-    // findbugsPlugins 'com.mebigfatguy.fb-contrib:fb-contrib:6.6.3'
+    // findbugsPlugins 'com.mebigfatguy.fb-contrib:fb-contrib:6.8.2'
 }
 
 
@@ -65,7 +65,6 @@ idea {
 
 // https://docs.gradle.org/current/dsl/org.gradle.api.plugins.quality.FindBugs.html
 findbugs {
-    toolVersion = "3.0.1"
     reportsDir = file("$project.buildDir/reports/findbugs")
     effort = "max"
     reportLevel = "low"
@@ -84,7 +83,6 @@ tasks.withType(FindBugs) {
 
 // https://docs.gradle.org/current/dsl/org.gradle.api.plugins.quality.Pmd.html
 pmd {
-    toolVersion = "5.5.1"
     reportsDir = file("$project.buildDir/reports/pmd")
     ruleSetFiles = files("$project.rootDir/config/pmd-rules.xml")
     ruleSets = [] // We specify all rules in rules.xml
@@ -101,7 +99,7 @@ tasks.withType(Pmd) {
 
 // https://docs.gradle.org/current/dsl/org.gradle.api.plugins.quality.Checkstyle.html
 checkstyle {
-    toolVersion = "7.1.2"
+    toolVersion = "7.4"
     configFile = file("$project.rootDir/config/checkstyle.xml")
     showViolations = false // Don't litter console
     checkstyleMain {
