--- a/build.gradle
+++ b/build.gradle
@@ -33,16 +33,18 @@ repositories {
 dependencies {
     compileOnly 'com.google.code.findbugs:jsr305:3.0.1'
     compileOnly 'com.google.code.findbugs:annotations:3.0.1'
-    compile 'com.google.guava:guava:20.0'
+
+    compile 'com.google.guava:guava:21.0-rc2'
     compile 'de.tum.in:owl-base:0.2.1'
     compile 'it.unimi.dsi:fastutil:7.0.13'
     compile files('lib/jhoafparser-1.1.1.jar')
+
     testCompile 'junit:junit:4+'
     testCompile 'org.hamcrest:hamcrest-library:1.3'
     testCompile 'com.google.code.findbugs:jsr305:3.0.1'
 
     // Additional Checks
-    // findbugsPlugins 'com.mebigfatguy.fb-contrib:fb-contrib:6.6.2'
+    // findbugsPlugins 'com.mebigfatguy.fb-contrib:fb-contrib:6.8.2'
 }
 
 tasks.withType(FindBugs) {
@@ -52,7 +54,7 @@ tasks.withType(FindBugs) {
     }
 }
 
-task createAllStartScripts() << {
+task createAllStartScripts() {
      // just a placeholder
 }
 
@@ -74,8 +76,8 @@ scripts.each() {scriptName, className ->
         classpath = jar.outputs.files + project.configurations.runtime
     }
     applicationDistribution.into("bin") {
-            from(t)
-            fileMode = 0755
+        from(t)
+        fileMode = 0755
     }
     createAllStartScripts.dependsOn(t)
 }
