--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,7 @@ def scripts = [
     'ltl2ldba':'translations.LTL2LDBA',
     'ltl2ldba-ng':'translations.LTL2LDBANG',
     'ltl2ldgba':'translations.LTL2LDGBA',
+    'ltl2ldgba-ng':'translations.LTL2LDGBANG',
     'nba2ldba':'translations.nba2ldba.NBA2LDBA',
     'ltl2parity':'translations.ltl2parity.LTL2Parity',
 ]
