Add size regression test for new construction.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,7 @@ test:ltl2ldgba:
 
 test:ltl2ldgba-ng:
   variables:
-    LTL_TOOL: "{ltl2ldgba} build/bin/ltl2ldgba-ng %f >%O"
+    LTL_TOOL: "{ltl2ldgba-ng} build/bin/ltl2ldgba-ng %f >%O"
   <<: *ltlcross_template
 
 test:ltl2parity:
@@ -79,5 +79,5 @@ test:ltl2ldgba:no-opt:
 
 test:ltl2ldgba-ng:no-opt:
   variables:
-    LTL_TOOL: "{ltl2ldgba} build/bin/ltl2ldgba-ng --optimisations=REMOVE_EPSILON_TRANSITIONS %f >%O"
+    LTL_TOOL: "{ltl2ldgba-ng} build/bin/ltl2ldgba-ng --optimisations=REMOVE_EPSILON_TRANSITIONS %f >%O"
   <<: *ltlcross_template
