--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ task createAllStartScripts() {
 def scripts = [
 	'ltl2det':'translations.ltl2det.LTL2Det',
     'ltl2ldba':'translations.LTL2LDBA',
-    'nba2ldba':'translations.nba2ldba.NBA2LDBA',
+    'nba2ldba':'translations.NBA2LDBA',
     'ltl2parity':'translations.ltl2parity.LTL2Parity',
 ]
 
