--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,13 @@ build:
     when: on_failure
     expire_in: 1 week
 
+# NBA to LDBA translations
+
+test:nba2ldba Vanilla:
+  variables:
+    LTL_TOOL: "{nba2ldba} ltl2tgba --ba -H -f %f | build/bin/nba2ldba --optimisations=REMOVE_EPSILON_TRANSITIONS %f >%O"
+  <<: *ltlcross_template
+
 # LTL to LDBA translations
 
 test:ltl2ldba Büchi:
@@ -67,13 +74,6 @@ test:ltl2ldba generalised-Büchi Guess-F:
 test:ltl2ldba generalised-Büchi Guess-F Vanilla:
   variables:
     LTL_TOOL: "{ltl2ldba} build/bin/ltl2ldba --generalised-Büchi --guess-F --optimisations=REMOVE_EPSILON_TRANSITIONS %f >%O"
-  <<: *ltlcross_template
-
-# NBA to LDBA translations
-
-test:nba2ldba Vanilla:
-  variables:
-    LTL_TOOL: "{nba2ldba} ltl2tgba -ba -H -f %f | build/bin/nba2ldba --optimisations=REMOVE_EPSILON_TRANSITIONS %f >%O"
   <<: *ltlcross_template
 
 # LTL to DPA translations
