--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,10 +83,22 @@ test:ltl2dpa:
     LTL_TOOL: "{ltl2dpa} build/bin/ltl2dpa %f >%O"
   <<: *ltlcross_template
 
+# Copy & Modify - Spot cannot handle parity automata without optimisation.
 test:ltl2dpa Vanilla:
   variables:
     LTL_TOOL: "{ltl2dpa} build/bin/ltl2dpa --optimisations=none %f >%O"
-  <<: *ltlcross_template
+  script: 
+    - JAVA_OPTS="-enableassertions"
+    - SPOT_TOOL="{spot} ltl2tgba -H -f %f >%O"
+    - ./gradlew --no-daemon distTar
+    - tar xvf build/distributions/translations-*.tar -C build --strip-components=1
+    - ltlcross --stop-on-error --grind=debug.ltl --timeout=300 -F "formulas/base.ltl" "$SPOT_TOOL" "$LTL_TOOL"
+    - ltlcross --stop-on-error --grind=debug.ltl --timeout=300 -F "formulas/regressions.ltl" "$SPOT_TOOL" "$LTL_TOOL"
+  artifacts:
+    paths:
+    - debug.ltl
+    when: on_failure
+    expire_in: 1 week
 
 test:ltl2dpa Parallel:
   variables:
