Restructure build script.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ before_script:
 build:
   stage: build
   script:
-    - ./gradlew --refresh-dependencies --no-daemon build
+    - ./gradlew --no-daemon build
   artifacts:
     paths:
     - build/reports/
@@ -28,13 +28,6 @@ build:
     - debug.ltl
     when: on_failure
     expire_in: 1 week
-
-# NBA to LDBA translations
-
-test:nba2ldba Vanilla:
-  variables:
-    LTL_TOOL: "{nba2ldba} ltl2tgba --ba -H -f %f | build/bin/nba2ldba --optimisations=REMOVE_EPSILON_TRANSITIONS >%O"
-  <<: *ltlcross_template
 
 # LTL to LDBA translations
 
@@ -76,6 +69,13 @@ test:ltl2ldba generalised-Büchi Guess-F:
 test:ltl2ldba generalised-Büchi Guess-F Vanilla:
   variables:
     LTL_TOOL: "{ltl2ldba} build/bin/ltl2ldba --generalised-Büchi --guess-F --optimisations=REMOVE_EPSILON_TRANSITIONS %f >%O"
+  <<: *ltlcross_template
+
+# NBA to LDBA translations
+
+test:nba2ldba Vanilla:
+  variables:
+    LTL_TOOL: "{nba2ldba} ltl2tgba --ba -H -f %f | build/bin/nba2ldba --optimisations=REMOVE_EPSILON_TRANSITIONS >%O"
   <<: *ltlcross_template
 
 # LTL to DPA translations
