--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     compileOnly 'com.google.code.findbugs:jsr305:3.0.1'
     compileOnly 'com.google.code.findbugs:annotations:3.0.1'
 
-    compile 'com.google.guava:guava:21.0-rc2'
+    compile 'com.google.guava:guava:21.0'
     compile 'de.tum.in:owl-base:0.2.2'
     compile 'it.unimi.dsi:fastutil:7.0.13'
     compile files('lib/jhoafparser-1.1.1.jar')
